--- a/dest/userManagement.html
+++ b/dest/userManagement.html
@@ -26,14 +26,22 @@
 			</div>
 			<div class="col-12 col-sm-12 col-md-10 col-lg-10">
 				<h4>Permissions</h4>
-				<div>
+				<div class="query">
+					<span class="glyphicon glyphicon-menu-hamburger hamburger"></span>
+						<ul class="queryone">
+							<li>Home </li>
+							<li>Course</li>
+							<li>Contact page</li>
+							<li>Services</li>
+						</ul>
 					
 				</div>
 			</div>
 		</div>
 	</div>
-	<script type="text/javascript" src="js/application.js"></script>
+	
 	<script type="text/javascript" src="js/bootstrap.js"></script>
 	<script type="text/javascript" src="js/jquery.js"></script>
+	<script type="text/javascript" src="js/application.js"></script>
 </body>
 </html>
