--- a/dest/jquery.html
+++ b/dest/jquery.html
@@ -11,37 +11,14 @@
 		<link rel="stylesheet" type="text/css" href="css/media1024.css">
 	</head>
 <body>
-	<header class="head-mentor">
-		<span class="glyphicon glyphicon-menu-hamburger"></span>
-		<h4 class="logo">techademy</h4>
-	</header>
+		<div id = "draggable" class = "ui-widget-content">
+         <p class = "back">Drag</p>
+      	</div>
 
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-12 col-sm-12 col-md-2 col-lg-2">
-				<ul class="Assign-user">
-					<li><a href="#">User Management</a></li>
-					<li><a href="#">Permissions</a></li>
-				</ul>
-			</div>
-			<div class="col-12 col-sm-12 col-md-10 col-lg-10">
-				<h4>Permissions</h4>
-				<div class="query">
-					<span class="glyphicon glyphicon-menu-hamburger hamburger"></span>
-						<ul class="queryone">
-							<li>Home </li>
-							<li>Course</li>
-							<li>Contact page</li>
-							<li>Services</li>
-						</ul>
-					
-				</div>
-			</div>
-		</div>
-	</div>
-	
 	<script type="text/javascript" src="js/bootstrap.js"></script>
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/application.js"></script>
+
+
 </body>
 </html>
