--- a/dest/about.html
+++ b/dest/about.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>My Personal Portfolio</title>
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -29,5 +30,4 @@
 	<script type="text/javascript" src="js/bootstrap.js"></script>
 	<script type="text/javascript" src="js/jquery.js"></script>
 </body>
-
 </html>
