--- a/dest/index.html
+++ b/dest/index.html
@@ -12,19 +12,55 @@
 </head>
 <body>
 	<!--start heading page-->
-	<nav id="main-nav">		
-			<div class="logo"><h4>Techademy</h4></div>
-			<span class="fa fa-bars hamgurger"></span>
-			<ul class="nav-manu">
-				<li><a href="#" class="smoothScroll">Home</a></li>
-				<li><a href="#" class="smoothScroll">About US</a></li>
-				<li><a href="#" class="smoothScroll">Mentoship</a></li>
-				<li><a href="#" class="smoothScroll">Contact Us</a></li>
-				<li><a href="#" class="smoothScroll">Join AS Mentor</a></li>
-			</ul>		
-	</nav>
+	<header id="main-nav">
+		<nav >		
+				<div class="logo"><h4>Techademy</h4></div>
+				<span class="fa fa-bars hamgurger"></span>
+				<ul class="nav-manu">
+					<li><a href="#" class="smoothScroll">Home</a></li>
+					<li><a href="#" class="smoothScroll">About US</a></li>
+					<li><a href="#" class="smoothScroll">Mentoship</a></li>
+					<li><a href="#" class="smoothScroll">Contact Us</a></li>
+					<li><a href="#" class="smoothScroll">Join AS Mentor</a></li>
+				</ul>		
+		</nav>
+	</header>
   	<!--end heading page-->
+  	<!--- start content pages ------------>
+  	<section id="section1">
+	  	<div class="container">
+	  		<div class="row">
+	  			<div class="col-12 col-md-6 offset-md-1 tech-mentor">
+	  				<h1>Techademy Mentorship</h1>
+	  				<p>Are you looking to gain 1-on-1 advice, mentorship or guidance on your company culture, customer service, or human resource journey? We have  a seasoned group  of professionals who are ready and equipped to help you.</p>
+	  			</div>
+	  			<div class="col-12 col-md-5">
+	  				<div id="login-form">
+	  					<!--<div class="head-login">
+	  						<span>Login</span>
+	  					</div>-->
+	  					<form>
+	  						<div class="form-group head-login">							    
+							    <h4>Login</h4>
+							</div>
+	  						<div class="form-group">							    
+							    <input type="text" class="form-control" id="exampleInputuser"  placeholder="User name">
+							</div>
+							<div class="form-group">							    
+							    <input type="password" class="form-control" id="exampleInputpass"  placeholder="Pa$$w0rd">							    
+							</div>
+							<span><a href="#">Forget password?</a></span>
+							<div class="form-group ">							    
+							    <button class="btn button-login">Login</button>
+							</div>
+	  					</form>
 
+	  				</div>
+	  			</div>
+	  		</div>  		
+	  	</div>
+	</section>
+  	<!--- /end content pages ------------>
   	<script type="text/javascript" src="js/jquery.js"></script>
   	<script type="text/javascript" src="js/bootstrap.js"></script>
 	<script type="text/javascript" src="js/application.js"></script>
