--- a/dest/about.html
+++ b/dest/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 <head>
 	<title>MOD Learning course website</title>
@@ -8,90 +8,43 @@
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<link rel="stylesheet" type="text/css" href="css/application.css">
-		
+		<link rel="stylesheet" type="text/css" href="css/application.css">		
 </head>
-<body>
-	<!--<section class="slide-head">
+<body>	
+	<section id="slide-head">
 		<div class="row">
-			<div class="col-md-3 slide-left-head">
-				<div class="logo-slide">Techademy</div><hr>
-				<div class="row">
-					<div class="col-4 col-md-4">
-						<img src="#" class="slide-img">
-					</div>
-					<div class="col-8 col-md-8">
-						<h4>James Doe</h4>
-						<span>Admin, Mentor</span>
-					
-					</div>
-						<div>
-							<ul>
-								<li>My Profile</li>
-								<li>Logout</li>
-					   		</ul>
+			<div class="col-12 col-md-2 slide-left">
+				<h5 class="logo-slide">Techademy</h5><hr>
+				<div class="card">
+					<div class="row no-gutters">
+						<div class="col-md-2">
+							<img src="" class="card-img">
 						</div>
+						<div class="col-md-10">
+							<div class="card-body">
+								<h5 class="card-title">James Doe</h5>
+								<span>Admin, Mentor</span>
+								<h5 class="card-title">My Profile</h5>
+								<h5 class="card-title">Logout</h5>
+							</div>
+						</div>
+					</div>
 				</div><hr>
 				<div>
-					<ul>
-						<li>Dashboard</li>
-						<li>Mentor Categories</li>
-						<li>Mentor Reviews</li>
-						<li>Import / Export users</li>
-						<li>user Roles</li>
+					<ul class="slide-ul">
+						<li><a href="#">Dashboard</a></li>
+						<li><a href="#">Mentor Categories</a></li>
+						<li><a href="#">Mentor Reviews</a></li>
+						<li><a href="#">Import/Export Users</a></li>
+						<li><a href="#">User Roles</a></li>
 					</ul>
-				</div>				
+				</div>
+			</div>
+			<div class="col-12 col-md-10">
+				<span class="fa fa-ellipsis-v">Dashboard</span>
 			</div>
 		</div>
-	</section>-->
-	<div id="accordion">
-  <h3>Section 1</h3>
-  <div>
-    <p>
-    Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
-    ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
-    amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
-    odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
-    </p>
-  </div>
-  <h3>Section 2</h3>
-  <div>
-    <p>
-    Sed non urna. Donec et ante. Phasellus eu ligula. Vestibulum sit amet
-    purus. Vivamus hendrerit, dolor at aliquet laoreet, mauris turpis porttitor
-    velit, faucibus interdum tellus libero ac justo. Vivamus non quam. In
-    suscipit faucibus urna.
-    </p>
-  </div>
-  <h3>Section 3</h3>
-  <div>
-    <p>
-    Nam enim risus, molestie et, porta ac, aliquam ac, risus. Quisque lobortis.
-    Phasellus pellentesque purus in massa. Aenean in pede. Phasellus ac libero
-    ac tellus pellentesque semper. Sed ac felis. Sed commodo, magna quis
-    lacinia ornare, quam ante aliquam nisi, eu iaculis leo purus venenatis dui.
-    </p>
-    <ul>
-      <li>List item one</li>
-      <li>List item two</li>
-      <li>List item three</li>
-    </ul>
-  </div>
-  <h3>Section 4</h3>
-  <div>
-    <p>
-    Cras dictum. Pellentesque habitant morbi tristique senectus et netus
-    et malesuada fames ac turpis egestas. Vestibulum ante ipsum primis in
-    faucibus orci luctus et ultrices posuere cubilia Curae; Aenean lacinia
-    mauris vel est.
-    </p>
-    <p>
-    Suspendisse eu nisl. Nullam ut libero. Integer dignissim consequat lectus.
-    Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
-    inceptos himenaeos.
-    </p>
-  </div>
-</div>
+	</section>
 	<script type="text/javascript" src="js/jquery.js"></script>
   	<script type="text/javascript" src="js/bootstrap.js"></script>
 	<script type="text/javascript" src="js/application.js"></script>	
