--- a/dest/about.html
+++ b/dest/about.html
@@ -1,19 +1,29 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>MOD Learning course website</title>
-	<meta charset="utf-8">
+		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="css/application.css">		
 </head>
 <body>	
-	
+	<div class="container-flex">
+		<div class="techlogo">techademy</div>
+		<div><span class="fa fa-th-large">Dashboard</span></div>
+		<div><span class="fa fa-address-card">catalog</span></div>
+		<div><span class="fa fa-address-card">catalog</span></div>
+		<div><span class="fa fa-address-card">catalog</span></div>
+		<div><span class="fa fa-address-card">catalog</span></div>
+	</div>
 	<script type="text/javascript" src="js/jquery.js"></script>
   	<script type="text/javascript" src="js/bootstrap.js"></script>
+  	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 	<script type="text/javascript" src="js/application.js"></script>	
 </body>
 </html>
